--- a/views/home.jade
+++ b/views/home.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  .container-fluid
+  .container-fluidZZ
     if messages.error
       .alert.alert-danger(role='alert')
         for error in messages.error
