--- a/views/home.jade
+++ b/views/home.jade
@@ -14,9 +14,8 @@ block content
       .alert.alert-info(role='alert')
         for info in messages.info
           div= info.msg
-
     .row
-      .col-sm-4
+      .col-sm-2
         .panel
           .panel-body
             h3 Heading
@@ -28,9 +27,13 @@ block content
             h3 Heading
             p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
             a.btn.btn-default(href='#', role='button') View details
-      .col-sm-4
+      .col-sm-2
         .panel
           .panel-body
             h3 Heading
-            p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+            p Donec test elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
             a.btn.btn-default(href='#', role='button') View details
+      .col-sm-4
+        .panel
+          .panel-body
+            h3 #{test}
