--- a/views/home.jade
+++ b/views/home.jade
@@ -17,4 +17,4 @@ block content
     .row
     ul
       - each result in test
-        img(src='img/'+result.attributes.img)
+        img.devant(src='img/'+result.attributes.img)
