--- a/public/css/main.css
+++ b/public/css/main.css
@@ -282,11 +282,16 @@ textarea {
   text-transform: uppercase;
 }
 
-.devant{
-  display:inline-block;
-  width:30%;
-  height: auto;
-  margin-left: 1.66%;
-  margin-right: 1.66%;
-  margin-bottom: 50px;
+div{
+  display: block;
+  margin-left:2%;
+  width:96%;
+  margin-bottom:2%;
+}
+
+ul{
+  display: inline-block;
+  font-size: 200%;
+  vertical-align: middle;
+
 }
