--- a/views/account/login.jade
+++ b/views/account/login.jade
@@ -9,7 +9,7 @@ block content
             for error in messages.error
               div= error.msg
 
-        form(method='POST')
+        form(action='/search', method='POST')
           legend Log In
           .form-group
             label.control-label(for='email') Email
