Link between payment and basket and finalization of the payment function

--- a/views/paiement.jade
+++ b/views/paiement.jade
@@ -15,55 +15,56 @@ block content
         for info in messages.info
           div= info.msg
 
-    div
-      label(for='nom') Nom :
-      input#nom(type='text')
-    div
-      label(for='prenom') Prenom :
-      input#prenom(type='text')
-    div
-      label(for='Pays') Pays :
-      input#pays(type='text')
-    div
-      label(for='Adresse') Adresse :
-      input#Adresse(type='text')
-    div
-      label(for='Ville') Ville :
-      input#Ville(type='text')
-    div
-      label(for='Code postal') Code postal :
-      input(type='text', id='Code postal')
-    div
-      label(for='Téléphone') Téléphone :
-      input(type='text', id='Téléphone')
-    div
-      label(for='E-mail') E-mail :
-      input#E-mail(type='text')
-    div
-      select(name='Type', size='1')
-        option
-          | Carte bancaire
-        option
-          | Visa
-        option
-          | Visa Electron
-        option
-          | EuroCard/MasterCard
-        option
-          | American Express
-        option
-          | Carte Aurore
-        option
-          | Carte prépayée
+    form.form-style-9(action = '/finalisation', method = 'post')
+      div
+        label(for='nom') Nom :
+        input#nom(type='text' required autofocus)
+      div
+        label(for='prenom') Prenom :
+        input#prenom(type='text' required)
+      div
+        label(for='Pays') Pays :
+        input#pays(type='text' required)
+      div
+        label(for='Adresse') Adresse :
+        input#Adresse(type='text' required)
+      div
+        label(for='Ville') Ville :
+        input#Ville(type='text' required)
+      div
+        label(for='Code postal') Code postal :
+        input(type='number', id='Code postal' required)
+      div
+        label(for='Téléphone') Téléphone :
+        input(type='tel', id='Téléphone' required)
+      div
+        label(for='E-mail') E-mail :
+        input#E-mail(type='email' required)
+      div
+        select(name='Type', size='1')
+          option
+            | Carte bancaire
+          option
+            | Visa
+          option
+            | Visa Electron
+          option
+            | EuroCard/MasterCard
+          option
+            | American Express
+          option
+            | Carte Aurore
+          option
+            | Carte prépayée
 
-    div
-      label(for='Titulaire') Titulaire :
-      input#Titulaire(type='text')
-    div
-      label(for='Numéro de carte') Numéro de carte :
-      input(type='text', id='Numéro de carte')
-    div
-      label(for="Date d'expiration") Date d'expiration :
-      input(type='text', id="Date d'expiration")
-    div
-      input(type='submit', value='Valider')
+      div
+        label(for='Titulaire') Titulaire :
+        input#Titulaire(type='text' required)
+      div
+        label(for='Numéro de carte') Numéro de carte :
+        input(type='number', id='Numéro de carte' required)
+      div
+        label(for="Date d'expiration") Date d'expiration :
+        input(type='date', id="Date d'expiration" required)
+      div
+        input(type='submit', value='Valider')
