--- a/views/panier.jade
+++ b/views/panier.jade
@@ -29,3 +29,4 @@ block content
             a.float(href='/s'+result.attributes.id)<button class="btn btn-primary">supprimer</button>
     .row
       p.total montant total: #{total}
+      a(href='/paiement')<button class="btn btn-primary">Payer</button>
