css and correction errors

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -375,7 +375,14 @@ img{
 
   .form-style-9 ul li input[type="button"]:hover,.form-style-9 ul li input[type="submit"]:hover {    background: linear-gradient(to bottom, #2D77A2 5%, #337DA8 100%);    background-color: #28739E;}
 
+.form-style-9 input{
+  margin-left: 1%;
+  margin-bottom: 2%;
+}
 
+.form-style-9 select{
+  margin-bottom: 2%;
+}
 
 /*-------------------menu---------------------------*/
 
@@ -449,4 +456,10 @@ a {color: black;margin: 5px; text-decoration: none;}
 .div{
   margin-left: none;
   margin-right: none;
+}
+
+.succes{
+  text-align: center;
+  font-size: 600%;
+  margin-top: 10%;
 }
