--- a/views/panier.jade
+++ b/views/panier.jade
@@ -31,3 +31,4 @@ block content
               input.btn.btn-primary(type='submit', value='Supprimer')
     .row
       p.total montant total: #{total}
+      a(href='#{btn}')<button class='btn btn-primary'>Payer</button>
