--- a/views/success.jade
+++ b/views/success.jade
@@ -15,4 +15,4 @@ block content
         for info in messages.info
           div= info.msg
     .row
-      p Paiement effectué
+      p.succes Paiement effectué
