--- a/views/home.jade
+++ b/views/home.jade
@@ -84,7 +84,7 @@ block content
           button.btn.btn-primary(type='submit') Accept
 
 
-      form(action='/search', method='POST').formSearch
+      form(action='/find', method='POST').formSearch
         input(type='text', name='search', id='search', placeholder='Search...', autofocus=true)
         button.btn.btn-primary(type='submit') Search
 
