--- a/views/paiement.jade
+++ b/views/paiement.jade
@@ -17,25 +17,25 @@ block content
 
     form.form-style-9(action = '/finalisation', method = 'post')
       div
-        label(for='nom') Nom :
+        label(for='name') Name :
         input#nom(type='text' required autofocus)
       div
-        label(for='prenom') Prenom :
+        label(for='first_name') First name :
         input#prenom(type='text' required)
       div
-        label(for='Pays') Pays :
+        label(for='country') Country :
         input#pays(type='text' required)
       div
-        label(for='Adresse') Adresse :
+        label(for='Address') Address :
         input#Adresse(type='text' required)
       div
-        label(for='Ville') Ville :
+        label(for='City') City :
         input#Ville(type='text' required)
       div
-        label(for='Code postal') Code postal :
+        label(for='Postal code') Postal code :
         input(type='number', id='Code postal' required)
       div
-        label(for='Téléphone') Téléphone :
+        label(for='phone') Phone :
         input(type='tel', id='Téléphone' required)
       div
         label(for='E-mail') E-mail :
@@ -43,7 +43,7 @@ block content
       div
         select(name='Type', size='1')
           option
-            | Carte bancaire
+            | Credit card
           option
             | Visa
           option
@@ -55,16 +55,16 @@ block content
           option
             | Carte Aurore
           option
-            | Carte prépayée
+            | Prepaid card
 
       div
-        label(for='Titulaire') Titulaire :
+        label(for='Holder') Holder :
         input#Titulaire(type='text' required)
       div
-        label(for='Numéro de carte') Numéro de carte :
+        label(for='Card number') Card number :
         input(type='number', id='Numéro de carte' required)
       div
-        label(for="Date d'expiration") Date d'expiration :
+        label(for="Expiration date") Expiration date :
         input(type='date', id="Date d'expiration" required)
       div
         input(type='submit', value='Valider')
