--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -1,5 +1,5 @@
 nav.navbar.navbar-default.navbar-static-top
-  .container
+  .w.container
     .navbar-header
       button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar')
         span.sr-only Toggle navigation
@@ -13,6 +13,10 @@ nav.navbar.navbar-default.navbar-static-top
           a(href='/') Home
         li(class=(title == 'Contact') ? 'active' : null)
           a(href='/contact') Contact
+        if user
+          li
+            if user.name == "Admin"
+              a(href='/admin')<button class='btn btn-primary'>admin</button>
         li
           a.lien(href='/panier')
             img.shop(src='img/shop.png')
@@ -26,12 +30,14 @@ nav.navbar.navbar-default.navbar-static-top
                 img(src=user.gravatar)
               | <span> #{user.name || user.email || user.id} </span>
               i.caret
+              li
             ul.dropdown-menu
               li
                 a(href='/account') My Account
               li.divider
               li
                 a(href='/logout') Logout
+
         else
           li(class=(title == 'Log in') ? 'active' : null)
             a(href='/login') Log in
