--- a/views/panier.jade
+++ b/views/panier.jade
@@ -32,6 +32,6 @@ block content
     .row
       p.total montant total: #{total}
       if total > 0
-        a(href='/paiement')<button class='btn btn-primary'>Payer</button>
+        a(href='/log')<button class='btn btn-primary'>Payer</button>
       else
         p buy a pair of shoes
