admin can add shoes git add *!

--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -16,7 +16,7 @@ nav.navbar.navbar-default.navbar-static-top
         if user
           li
             if user.name == "Admin"
-              a(href='/admin')<button class='btn btn-primary'>admin</button>
+              a(href='/addProduct')<button class='btn btn-primary'>admin</button>
         li
           a.lien(href='/panier')
             img.shop(src='img/shop.png')
